--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="./public/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>CashForce</title>
   </head>
-  <body>
+  <body style="margin: 0px; box-sizing: border-box;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
